[gd_scene load_steps=19 format=3 uid="uid://dty7go6f8bor5"]

[ext_resource type="Script" path="res://Scenes/Globals/global_audio_player.gd" id="1_nq8wv"]
[ext_resource type="AudioStream" uid="uid://cqxeu54c05ut5" path="res://audio/Monster Death 2.mp3" id="1_w34n4"]
[ext_resource type="AudioStream" uid="uid://cii4dxm033rg0" path="res://audio/Battle Theme (Farmageddon).mp3" id="2_8csiv"]
[ext_resource type="AudioStream" uid="uid://dt1k8m5t0pl2h" path="res://audio/Menu Click 2.mp3" id="2_upd2m"]
[ext_resource type="AudioStream" uid="uid://bb452c0n8tn2c" path="res://audio/Monster Death 1.mp3" id="3_e5ug2"]
[ext_resource type="AudioStream" uid="uid://bib14xxnufcsn" path="res://audio/Idle Theme (Farmageddon).mp3" id="3_j1jh8"]
[ext_resource type="AudioStream" uid="uid://dtfobtrg683gv" path="res://audio/Title Theme (Farmageddon).mp3" id="4_nq2si"]
[ext_resource type="AudioStream" uid="uid://cndhtqp2qv3su" path="res://audio/Earthquake.mp3" id="4_qipc3"]
[ext_resource type="AudioStream" uid="uid://b51ytrsoahecx" path="res://audio/Main Theme (Farmageddon).mp3" id="5_s3rg6"]
[ext_resource type="AudioStream" uid="uid://payegjc72x1l" path="res://audio/Menu Click 1.mp3" id="6_i4h1g"]
[ext_resource type="AudioStream" uid="uid://d280si48cjksc" path="res://audio/Explosion.mp3" id="7_5ikom"]
[ext_resource type="AudioStream" uid="uid://dnlren4rh853a" path="res://audio/Monster Death 3.mp3" id="9_vuyg6"]
[ext_resource type="AudioStream" uid="uid://bk4mm78b7iks6" path="res://audio/Fish Splat.mp3" id="10_0tnkj"]
[ext_resource type="AudioStream" uid="uid://bmff8qhdaenrp" path="res://audio/Wave Fail.mp3" id="11_ql3dl"]
[ext_resource type="AudioStream" uid="uid://d4cmhd0n6ie37" path="res://audio/Shark Chomp.mp3" id="11_wd53o"]
[ext_resource type="AudioStream" uid="uid://cao4buqi6tcni" path="res://audio/Wave Smash.mp3" id="16_gq5d2"]
[ext_resource type="AudioStream" uid="uid://0h6p5bt7xa8r" path="res://audio/Rooster Crow.mp3" id="17_kvqdg"]
[ext_resource type="AudioStream" uid="uid://jakeqwvf0flw" path="res://audio/Wave Success.mp3" id="18_qspkf"]

[node name="GlobalAudioPlayer" type="Node"]
script = ExtResource("1_nq8wv")

[node name="BattleThemeMusic" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("2_8csiv")
volume_db = -22.0
bus = &"Music"

[node name="IdleThemeMusic" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("3_j1jh8")
volume_db = -22.0
bus = &"Music"

[node name="TitleThemeMusic" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("4_nq2si")
volume_db = -22.0
bus = &"Music"

[node name="MainThemeMusic" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("5_s3rg6")
volume_db = -22.0
bus = &"Music"

[node name="MenuClick" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("2_upd2m")
volume_db = -9.369
pitch_scale = 1.27
bus = &"SFX"

[node name="SnailDeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("1_w34n4")
volume_db = -8.126
pitch_scale = 1.32
bus = &"SFX"

[node name="ScumbugDeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_e5ug2")
volume_db = -23.747
pitch_scale = 4.0
bus = &"SFX"

[node name="BeetleDeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("1_w34n4")
volume_db = -9.445
pitch_scale = 0.5
bus = &"SFX"

[node name="VultureDeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_vuyg6")
volume_db = -15.928
pitch_scale = 0.71
bus = &"SFX"

[node name="EarthquakeSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_qipc3")
volume_db = -22.486
pitch_scale = 0.78
bus = &"SFX"

[node name="FailSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_ql3dl")
volume_db = -16.865
pitch_scale = 0.91
bus = &"SFX"

[node name="Placement" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_i4h1g")
volume_db = -9.369
pitch_scale = 1.36
bus = &"SFX"

[node name="StrawberryProjectile" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_5ikom")
volume_db = -23.753
pitch_scale = 1.26
bus = &"SFX"

[node name="FishNom" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_0tnkj")
volume_db = -18.131
pitch_scale = 1.26
bus = &"SFX"

[node name="SharkChomp" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_wd53o")
volume_db = -16.257
pitch_scale = 1.26
bus = &"SFX"

[node name="WaveSmash" type="AudioStreamPlayer" parent="."]
stream = ExtResource("16_gq5d2")
volume_db = -16.257
pitch_scale = 1.26
bus = &"SFX"

[node name="Cockerel" type="AudioStreamPlayer" parent="."]
stream = ExtResource("17_kvqdg")
volume_db = -16.257
pitch_scale = 1.26
bus = &"SFX"

[node name="WinSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("18_qspkf")
volume_db = -16.257
pitch_scale = 1.26
bus = &"SFX"
